# chadvis-projectm-qt

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  GENERAL_LLM_STARTING_PROMPT.md  Inital_self_loop_prompt_for_visualizer_project.md  README.md  TODO.md  build-fast.sh  build.sh  build.zsh  clerk-handshake-url.md  patch.py  ralph-loop.local.md  update_theme.patch
.agent/: CLAUDE_NOTES.md  IMPROVMENT_IDEAS_FROM_HEADERS_GEMINI-3.1-PRO-PREVIEW.md  QML_COMPONENT_DESIGN.md  QML_REFACTOR_GUIDE.md  QML_REFACTOR_PLAN.md  SUNO_API_ENDPOINTS.md  SUNO_API_REFERENCE.md  TASKS.md  TODO.md  URL_FOR_GOOGLE_AUTH.md  plan.md
.backup_graveyard/: AGENTS.md.bak.20260421_035253  KNOWLEDGE_BASE_PR9.md  MORE_IMPROVMENTS_AND_IDEAS_CPP23_MAJOR_REFACTOR_OVERALL_PROJECT_GUIDEANCE.md.20260327_084034  NVIDIA_MODELS.md  SUPPLEMENTAL_ARCHITECTURE_ANALYSIS_OF_PREVIOUS_CODEBASE_PRE-QML_REFACTOR.md.20260327_084034  USER_TEMP_20260414_135057.md  VisualizerQuickItem.cpp.20260323_205317  VisualizerQuickItem.hpp.20260323_205317
.backup_graveyard/audio/: FFmpegAudioSource.cpp  FFmpegAudioSource.hpp  SDLMixerAudioSource.hpp
.backup_graveyard/docs_refresh_backup/: CHANGELOG.md  README.md  SUNO_INTEGRATION.md
.backup_graveyard/ui.20260321_232055/: KaraokeWidget.hpp  LyricsPanel.hpp  MainWindow.hpp  PlayerControls.cpp  SidebarWidget.cpp  SunoBrowser.hpp  SunoBrowserWidget.hpp  SunoCookieDialog.cpp  SystemBrowserAuth.cpp  SystemBrowserAuth.hpp  VisualizerPanel.cpp
.ralph/: ralph-history.json  ralph-loop.state.json
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: suno_lyrics_revamp.md
cmake/: FindProjectM4.cmake
config/: default.toml  offical-projectM-config.inp
docs/: AGENTS.md  AGENT_CONTEXT.md  AGENT_QUICKSTART.md  API_SCRATCH_SUB_AGENT_FINDINGS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CPM_INTEGRATION.md  FILE_STRUCTURE.md  INDEX.md  QML_REFACTOR_GUIDE.md  SUNO_API_CPP_QT6_INTEGRATION_GUIDE.md  SUNO_API_NOTES.md  SUNO_B_SIDE_DISCOVERY.md  SUNO_INTEGRATION.md  VIDEO_RECORDING.md  endpoints_sniffed_sort-uniq-tee.list.md  video_recording_redesign.md
docs/changelogs/: README.md  v1.0.x.md
docs/dev/: ARCHITECTURE.md  CONTRIBUTING.md
docs/integration/: INDEX.md  PROJECTM.md  SUNO.md
docs/lore/: HISTORY.md  MANIFESTO.md
docs/suno_api/: ENDPOINT-INVENTORY.md  README.md  auth.md  b-side.md  billing.md  feature-flags.md  generation.md  library.md  persona.md  projects.md  social.md  upload.md
docs/user/: CONFIG.md  INSTALL.md  USAGE.md
docs/user-messages/: INITAL_PROMPT.md
elephant-audio/: FFmpegAudioSource.hpp
projectm-qt-visualizer/: .gitignore  CMakeLists.txt  README.md  build.sh
projectm-qt-visualizer/.agent/: CURRENT_STATE.md  SESSION_HANDOFF.md
projectm-qt-visualizer/.cache/clangd/index/: MainWindow.cpp.EC50E8C5D20F9198.idx  MainWindow.hpp.AD3CD597822E124C.idx  VisualizerWidget.cpp.80760A4820770170.idx  VisualizerWidget.hpp.362DAE3865E2C5BC.idx
projectm-qt-visualizer/config/: default.toml
projectm-qt-visualizer/docs/: DEBUGGING_GUIDE.md
projectm-qt-visualizer/scripts/: build.sh  build_release.sh  run_app.sh
projectm-qt-visualizer/scripts/git/: commit_safe.sh
projectm-qt-visualizer/src/: CMakeLists.txt  ProjectMWindow.cpp  ProjectMWindow.hpp  main.cpp  main_new.cpp
projectm-qt-visualizer/src/audio/: AudioEngine.cpp  AudioEngine.hpp
projectm-qt-visualizer/src/core/: Config.cpp  Config.hpp
projectm-qt-visualizer/src/core/utils/: Logger.cpp  Logger.hpp
projectm-qt-visualizer/src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  VisualizerWidget.cpp  VisualizerWidget.hpp
projectm-qt-visualizer/src/platform/: CMakeLists.txt
projectm-qt-visualizer/src/platform/linux/: PulseAudioSource.cpp  PulseAudioSource.hpp
projectm-qt-visualizer/src/projectm/: CMakeLists.txt  ProjectMWrapper.cpp  ProjectMWrapper.hpp
projectm-qt-visualizer/src/ui/: MainWindow.cpp
projectm-qt-visualizer/src/util/: Types.hpp
projectm-qt-visualizer/src/visualizer/: ProjectMBridge.cpp  VisualizerWindow.cpp  VisualizerWindow.hpp
resources/: catppuccin-frappe-theme.qss  chadvis-projectm-qt.qrc  dark-theme.qss
resources/browser_extension/: README.md  background.js  content.js  injected.js  manifest.json  popup.html  popup.js
resources/qml/: MainWorkspace.qml
scripts/: build.zsh  build_clean.sh  build_release.sh  check_deps.sh  run_app.sh  run_tests.sh  search_db.sh
skills/cpp-coding-standards/: SKILL.md
src/: main.cpp
src/audio/: AudioAnalyzer.cpp  AudioAnalyzer.hpp  AudioBridge.cpp  AudioBridge.hpp  AudioEngine.cpp  AudioEngine.cpp.backup  AudioEngine.hpp  AudioQueue.hpp  FFmpegAudioSource.cpp  Playlist.cpp  Playlist.hpp  SDLMixerAudioSource.cpp
src/core/: Application.cpp  Application.hpp  ArgParser.cpp  ArgParser.hpp  CliArg.hpp  CliArgs.inc  CliUtils.cpp  CliUtils.hpp  Config.cpp  Config.hpp  ConfigData.hpp  ConfigLoader.cpp  ConfigLoader.hpp  ConfigParsers.cpp  ConfigParsers.hpp  HelpPrinter.cpp  HelpPrinter.hpp  Logger.cpp  Logger.hpp  ThemeLoader.cpp  ThemeLoader.hpp
src/lyrics/: LyricsData.cpp  LyricsData.hpp  LyricsLoader.hpp  LyricsRenderer.cpp  LyricsRenderer.hpp  LyricsSync.cpp  LyricsSync.hpp
src/overlay/: OverlayConfig.cpp  OverlayConfig.hpp  OverlayEngine.cpp  OverlayEngine.hpp  OverlayRenderer.cpp  OverlayRenderer.hpp
src/qml/: main.qml
src/qml_bridge/: AudioBridge.cpp  AudioBridge.hpp  BridgeRegistration.cpp  BridgeRegistration.hpp  LyricsBridge.cpp  LyricsBridge.hpp  OverlayBridge.cpp  OverlayBridge.hpp  PlaylistBridge.cpp  PlaylistBridge.hpp  PresetBridge.cpp  PresetBridge.hpp  RecordingBridge.cpp  RecordingBridge.hpp  SettingMacros.hpp  SettingsBridge.cpp  SettingsBridge.hpp  SettingsBridgeSettings.inc  SunoBridge.cpp  SunoBridge.hpp  ThemeBridge.cpp  ThemeBridge.hpp  VisualizerBridge.cpp  VisualizerBridge.hpp  VisualizerItem.cpp  VisualizerItem.hpp  VisualizerQFBO.cpp  VisualizerQFBO.hpp
src/recorder/: EncoderSettings.cpp  EncoderSettings.hpp  FrameGrabber.cpp  FrameGrabber.hpp  KaraokeVideoExporter.cpp  KaraokeVideoExporter.hpp  VideoRecorder.cpp  VideoRecorder.hpp  (+6 more)
tests/integration/: CMakeLists.txt  test_main.cpp
(+193 files in other folders)
